--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <form class="js-toDoForm">
       <input type="text" placeholder="Write a to do" />
     </form>
-    <div class="List">
+    <div class="js-List List">
       <ul class="js-toDoList"></ul>
       <ul class="js-doneList"></ul>
     </div>
